<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.mcfuct.MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/overview"
            style="@style/CategoryStyle"
            android:background="@color/category_overview"
            android:text="@string/category_overview" />

        <TextView
            android:id="@+id/admin"
            style="@style/CategoryStyle"
            android:background="@color/category_admin"
            android:text="@string/category_admin" />

        <TextView
            android:id="@+id/finance"
            style="@style/CategoryStyle"
            android:background="@color/category_finance"
            android:text="@string/category_finance" />

        <TextView
            android:id="@+id/leadership"
            style="@style/CategoryStyle"
            android:background="@color/category_leadership"
            android:text="@string/category_leadership" />
        <TextView
            android:id="@+id/internship"
            style="@style/CategoryStyle"
            android:background="@color/category_internship"
            android:text="@string/category_internship" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Application"
            style="@style/CategoryStyle"
            android:background="#536DFE"/>

    </LinearLayout>
</ScrollView>
